Add Luma Tools API for file processing (image, audio, video, PDF)
- Implemented endpoints for image compression, resizing, and conversion.
- Added audio conversion functionality with support for multiple formats.
- Introduced video compression, trimming, conversion, and audio extraction endpoints.
- Integrated PDF compression, merging, and conversion to images.
- Utilized ffmpeg for media processing and Ghostscript for PDF handling.
- Enhanced error handling and logging for processing jobs.
- Added job status tracking for asynchronous operations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,14 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(json)
 
-add_executable(luma-tools src/main.cpp)
+add_executable(luma-tools
+    src/main.cpp
+    src/common.cpp
+    src/platform.cpp
+    src/discord.cpp
+    src/routes_download.cpp
+    src/routes_tools.cpp
+)
 
 target_link_libraries(luma-tools PRIVATE httplib::httplib nlohmann_json::nlohmann_json)
 
