feat: implement statistics tracking and dashboard routes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,10 @@ add_executable(luma-tools
     src/common.cpp
     src/platform.cpp
     src/discord.cpp
+    src/stats.cpp
     src/routes_download.cpp
     src/routes_tools.cpp
+    src/routes_stats.cpp
 )
 
 target_link_libraries(luma-tools PRIVATE httplib::httplib nlohmann_json::nlohmann_json)
